package org.dataintegration.model;

import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Data;
import lombok.NoArgsConstructor;
import lombok.NonNull;

import java.util.Map;
import java.util.UUID;

@Data
@Builder
@NoArgsConstructor
@AllArgsConstructor
public class DataIntegrationInputDataAPIModel {

    @NonNull
    private UUID mappedItemId;
    @NonNull
    private Map<String, String> data;

}
